[package]
name = "tish-playground-server"
version = "0.1.0"
edition = "2021"
description = "Compile API for the Tish playground"

[dependencies]
axum = "0.7"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }

tish_bytecode = { path = "../../tish/crates/tish_bytecode" }
tish_compile_js = { path = "../../tish/crates/tish_compile_js" }
tish_opt = { path = "../../tish/crates/tish_opt" }
tish_parser = { path = "../../tish/crates/tish_parser" }
